feat(api): criacao e implementacao das classes ('camadas') e definicao das entidades e regras, alem de atividades complementares.

--- a/Backend/MarcadorPontos/Application/Application.csproj
+++ b/Backend/MarcadorPontos/Application/Application.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interface\" />
-    <Folder Include="Application\" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
 </Project>
